force-app/main/default/objects/aqi_ltng_mng__Article_Quality__c/aqi_ltng_mng__Article_Quality__c.object-meta.xml
<CustomObject>
    <description>Following the KCS methodology, each record captures article quality review results that can be summarized to measure overall Knowledge quality.</description>
    <label>Content Standard Checklist</label>
    <nameField>
        <label>Content Standard Checklist Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Content Standard Checklist</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>