force-app/main/default/objects/aqi_ltng_mng__Article_Quality__c/fields/aqi_ltng_mng__AQ_Score__c.field-meta.xml
<CustomField>
    <fullName>aqi_ltng_mng__AQ_Score__c</fullName>
    <label>Content Standard Met</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>