force-app/main/default/objects/aqi_ltng_mng__Article_Quality__c/fields/aqi_ltng_mng__Art_Meets_Content_Standard__c.field-meta.xml
<CustomField>
    <fullName>aqi_ltng_mng__Art_Meets_Content_Standard__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Article meets content standard(Obsolete)</label>
    <type>Checkbox</type>
</CustomField>