force-app/main/default/objects/aqi_ltng_mng__Article_Quality__c/fields/aqi_ltng_mng__Content_Understandable__c.field-meta.xml
<CustomField>
    <fullName>aqi_ltng_mng__Content_Understandable__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is the Content Clear?</label>
    <type>Checkbox</type>
</CustomField>