force-app/main/default/objects/aqi_ltng_mng__Article_Quality__c/fields/aqi_ltng_mng__Custom_Question_1__c.field-meta.xml
<CustomField>
    <fullName>aqi_ltng_mng__Custom_Question_1__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Custom Question 1</label>
    <type>Checkbox</type>
</CustomField>