force-app/main/default/objects/aqi_ltng_mng__Article_Quality__c/fields/aqi_ltng_mng__OldAQIId__c.field-meta.xml
<CustomField>
    <fullName>aqi_ltng_mng__OldAQIId__c</fullName>
    <label>OldAQIId</label>
    <length>18</length>
    <type>Text</type>
</CustomField>