force-app/main/default/objects/aqi_ltng_mng__Article_Quality__c/validationRules/aqi_ltng_mng__CheckActionProviderBy.validationRule-meta.xml
<ValidationRule>
    <fullName>aqi_ltng_mng__CheckActionProviderBy</fullName>
    <active>true</active>
    <errorConditionFormula>aqi_ltng_mng__Action_Needed__c &amp;&amp;  ISBLANK( aqi_ltng_mng__Action_Assigned_To__c )</errorConditionFormula>
    <errorMessage>A user must be assigned if the checkbox on the &apos;Follow Up&apos; section was selected.</errorMessage>
</ValidationRule>